--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,23 @@
+/config/*
+!/config/formats.ts
+/logs/*
+/test/modlogs
+/test/replays/*.html
+/node_modules
+/eslint-cache
+/server/chat-plugins/private
+/server/chat-plugins/private.js
+/server/chat-plugins/*-private.js
+npm-debug.log
+.eslintcache
+.eslintcache-no-types
+package-lock.json
+/tools/set-import/sets
 databases/*.db*
 *.o
-*node_modules/*
 *.o.dSYM
 # Typescript build artifacts
+.*-dist/
 tools/set-import/importer.js
 tools/modlog/converter.js
 *.tsbuildinfo
@@ -30,6 +45,7 @@ tmp/**/*
 .installed.cfg
 
 downloads
+dist
 
 # egg related
 develop-eggs
